--- a/index.html
+++ b/index.html
@@ -2,13 +2,27 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Arun Sreelalan Iyer's GitHub Page</title>
 </head>
 <body style = "background-color: #414141">
     <img style="width: 120px; height: 120px; left: 30px; top: 30px; position: absolute" src="https://placehold.co/119x119" />
 
     <div style="left: 165px; top: 62px; position: absolute; color: white; font-size: 40px; font-family: Adamina; font-weight: 400; word-wrap: break-word">ARUN SREELALAN IYER</div>
-    <div style="width: 638px; left: 30px; top: 215px; position: absolute; color: white; font-size: 24px; font-family: Benne; font-weight: 400; word-wrap: break-word">Hello!<br/>Thank you so much for visiting my page.<br/><br/>I am an experienced Product Manager, Visiting Professor at several leading B-Schools, Public Speaker and Consultant, and a semi-pro guitarist.<br/><br/>Professional Experience:<br/>I have previously worked with Cisco, Microsoft, Ola, McKinsey, UiPath and Bajaj Finserv. Currently I head an AI/ML solutions company.<br/><br/>I have a total of 15+ years of experience, with 12+ years as a Product Manager. I have developed several B2B and B2C Mobile Apps and Websites, and have led teams of Product Managers for 10+ years.<br/><br/>I am a Visiting Professor for Digital Product Management and UI/UX at IIM Calcutta, IIM Bangalore, IIM Trichy, IIIT Bangalore and other institutes.<br/><br/>Additionally, I am part of the Core Team at NASSCOM where I lead programs for the Prime Minister's Skill India initiative to upskill the state-of-art of Product Management in India, and foster Industry-Academia collaboration.</div>
+    <div style="width: 638px; left: 30px; top: 215px; position: absolute; color: white; font-size: 20px; font-family: Benne; font-weight: 400; word-wrap: break-word">
+        Hello!<br/>
+        Thank you so much for visiting my page.<br/><br/>
+
+        I am an experienced Product Manager, Visiting Professor at several leading B-Schools, Public Speaker and Consultant, and a semi-pro guitarist.<br/><br/>
+
+        Professional Experience:<br/>
+        I have previously worked with Cisco, Microsoft, Ola, McKinsey, UiPath and Bajaj Finserv. Currently I head an AI/ML solutions company.<br/><br/>
+
+        I have a total of 15+ years of experience, with 12+ years as a Product Manager. I have developed several B2B and B2C Mobile Apps and Websites, and have led teams of Product Managers for 10+ years.<br/><br/>
+
+        I am a Visiting Professor for Digital Product Management and UI/UX at IIM Calcutta, IIM Bangalore, IIM Trichy, IIIT Bangalore and other institutes.<br/><br/>
+
+        Additionally, I am part of the Core Team at NASSCOM where I lead programs for the Prime Minister's Skill India initiative to upskill the state-of-art of Product Management in India, and foster Industry-Academia collaboration.</div>
 
 </body>
 </html>
